# football-group-manager

./: .env  .env.example  .env.test  .gitignore  Cargo.toml  schema.dbdiagram  schema.dbml
migrations/: 20260419234306_create_users.up.sql
src/: lib.rs  main.rs
src/app/: router.rs
src/dto/: user.rs
src/models/: user.rs
src/routes/: users.rs
src/services/: users.rs
src/utils/: functions.rs
tests/: hello_world.rs  mod.rs
tests/common/: db.rs  default_data.rs  mod.rs
tests/users/: get.rs  post.rs
